--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,6 +30,10 @@ android {
 }
 
 dependencies {
+/*    implementation 'com.square.retrofit2:retrofit2:2.4.0'
+    implementation 'com.square.retrofit2:converter-gson:2.4.0'*/
+    implementation 'com.google.firebase:firebase-database:20.0.0'
+    implementation 'androidx.recyclerview:recyclerview:1.3.0'
     implementation 'com.google.android.recaptcha:recaptcha:18.1.1'
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.8.0'
