--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -13,6 +14,18 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.FirebaseRegister2"
         tools:targetApi="31">
+        <activity
+            android:name=".Membership"
+            android:exported="false" />
+        <activity
+            android:name=".CalenderActivity"
+            android:exported="false" />
+        <activity
+            android:name=".CheckList"
+            android:exported="false" />
+<!--        <activity
+            android:name=".RestApi"
+            android:exported="false" />-->
         <activity
             android:name=".Test4CalenderActivity"
             android:exported="false" />
