--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,33 +11,21 @@
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:usesCleartextTraffic="true"
         android:supportsRtl="true"
         android:theme="@style/Theme.FirebaseRegister2"
         tools:targetApi="31">
         <activity
-            android:name=".Membership"
-            android:exported="false" />
-        <activity
             android:name=".CalenderActivity"
             android:exported="false" />
-        <activity
-            android:name=".CheckList"
-            android:exported="false" />
-<!--        <activity
-            android:name=".RestApi"
-            android:exported="false" />-->
-        <activity
-            android:name=".Test4CalenderActivity"
-            android:exported="false" />
-        <activity
-            android:name=".test2"
-            android:exported="true" />
-        <activity
-            android:name=".test1"
-            android:exported="true" />
-        <activity
-            android:name=".test3"
-            android:exported="true" />
+
+        <activity android:name=".RestApi3"
+            android:label="RestApiActivity">
+        </activity>
+        <activity android:name=".RestApi4"
+            android:label="RestApiActivity">
+        </activity>
+
         <activity
             android:name=".RegisterActivity"
             android:exported="false" />
